Bug 273853 - The layer box docker up and down arrows do not work inside layer groups
Summary: The layer box docker up and down arrows do not work inside layer groups
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Dockers (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Compiled Sources Linux
: NOR major
Target Milestone: ---
Assignee: pentalis
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-05-22 17:17 UTC by pentalis
Modified: 2011-07-07 09:45 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description pentalis 2011-05-22 17:17:05 UTC
<copypaste title here>
Comment 1 pentalis 2011-06-24 22:13:23 UTC
I'm not sure when this got fixed but they work now, so I'm closing this bug.
Comment 2 Halla Rempt 2011-06-25 09:53:35 UTC
Well, I think up/down also should be usable to move outside a layergroup -- i.e., up/down should move through the whole stack as if it was linear, not nested.
Comment 3 pentalis 2011-07-01 06:39:04 UTC
(In reply to comment #2)
> Well, I think up/down also should be usable to move outside a layergroup --
> i.e., up/down should move through the whole stack as if it was linear, not
> nested.

Well, that can only work for leaving a layergroup.
There is no way to distinguish between entering a layergroup and moving through it when only using the up-down arrows.

So, I'll be adding only the functionality for leaving one.
Comment 4 pentalis 2011-07-07 09:45:19 UTC
Git commit fe734322e4c25d33f72122feb56d8205eb7416ba by José Luis Vergara.
Committed on 07/07/2011 at 11:35.
Pushed by jlvergara into branch 'master'.

Fine tune the behavior of the Layer Box arrows and slight change of code style

BUG:273853

M  +18   -12   krita/plugins/extensions/dockers/defaultdockers/kis_layer_box.cpp     

http://commits.kde.org/calligra/fe734322e4c25d33f72122feb56d8205eb7416ba