Fine tune the behavior of the Layer Box arrows and slight change of code style

BUG:273853